@@ -1,3 +1,8 @@
+2008-05-18  Naohiro Aota  <nao.aota@gmail.com>
+
+	* w3m-cookie.el (w3m-cookie-save-current-site-cookies): New function.
+	(w3m-cookie-save): Add optional argument "domain".
+
 2008-05-16  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* mew-w3m.el (mew-w3m-add-text-properties): New inline macro.
